<resources>
    <string name="app_name">Data Entry</string>
    <string name="gps_setting">GPS settings</string>
    <string name="gps_settting_mesg">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="cancel">Cancel</string>
    <string name="app_ad_id">ca-app-pub-6382099871444261~9778932425</string>
    <string name="banner_ad_unit_id">ca-app-pub-6382099871444261/7164732597</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-6382099871444261/4249427662</string>
    <string name="banner">BANNER</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDH3opzyjC2CEqf2SMho138_27aeOGIF74</string>
    <string name="logout">Log Out</string>
    <string name="Other">Others</string>
    <string name="plan_list">Plan List</string>
    <string name="add_plan">Add Visit Plan</string>
    <string name="profile">My Profile</string>

    <string name="drawer_icon">Drawer Icon</string>

    <string name="menu_assignment">My Assignment</string>
    <string name="menu_plan">My Planner</string>
    <string name="menu_chase">My Chases</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_performance">My Performance</string>
    <string name="communicate">Communicate</string>

    <string name="logout_title">Logout</string>
    <string name="gps_chec">Please check your gps connection</string>
    <string name="logout_message">Are you sure you want to logout?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="share_text">Install best shopping application from:</string>
    <!--common strings-->
    <string name="no_internet">No internet!</string>
    <string name="connect">Connect</string>
    <!--- Addmob   !-->


    <string name="menu_setting">Settings</string>
    <string name="menu_history">History</string>
    <string name="empty_result">no data</string>
    <string name="search">search...</string>


    <string name="repayment">Repayment Details/Status</string>
    <string name="other_detail">Other Account Details</string>
    <string name="client_detail">Client\'s Detail</string>
    <string name="guarantor_details">Guarantor Detail</string>
    <string name="litigation">Litigation Detail</string>
    <string name="security">Security Detail</string>
    <string name="facility">Facility Details</string>
    <string name="asset">Asset Details</string>
    <string name="check">PDC General/Cheque History</string>
    <string name="adjusment">Adjusment History</string>
    <string name="emi"><![CDATA[EMI & Interest Rate History]]></string>
    <string name="chase">Chase History</string>
    <string name="other_term"><![CDATA[Other terms &amp; Conditions :]]></string>
    <string name="error_text">Error</string>
    <string name="success_code">200</string>
    <string name="success_status">ok</string>
    <string name="otp_success"><![CDATA[otp code sent successfully,please check your phone for otp code & enter the code]]></string>
    <string name="internet_not_available">Internet not available, Please check your connection or connect to the internet</string>
    <string name="please_wait">Please wait...</string>
    <string name="reqired_text">Required</string>
    <string name="enable_location">Please wait... GPS is not enabled,please enable your device location.Data save is not valid without your device location.</string>
    <string name="tab_balance_sheet">Balance Sheet</string>
    <string name="tab_income_statement">Income Statement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unassigned_apprisal">Unassigned Appraisal</string>
    <string name="my_apprisal">My Appraisal</string>
    <string name="approved_apprisal">Approved Appraisal</string>
    <string name="type_text">Text</string>
    <string name="general">General</string>

    <string name="alert">Alert please !</string>
    <string name="save_txt">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_alert">Do you want to save data now?</string>
    <string name="loan">Loan</string>
    <string name="save_this_change">Do you want to save this change?</string>
    <string name="save_this_change_successfully">Data successfully saved</string>
    <string name="dialoge_text">Are you sure,want exit from App?</string>

    <string name="sub_sector">SubSectors</string>
    <string name="crg_ques">CRG Questionnaire</string>
    <string name="attend_add">Check in/out</string>
    <string name="attend_list">Data List</string>
    <string name="it_support">Developed by nuveq Software LTD</string>
    <string name="permission_denied">Permission denied</string>
    <string name="share">share</string>
    <string name="add_sale">Add Patient</string>
    <string name="sales_list">Patients list</string>
    <string name="failed">Failed!</string>
    <string name="user_empty">please select both dates</string>
    <string name="check_in_alert">Are you sure, do you want to check in now?</string>
    <string name="check_out_alert">Are you sure, do you want to check out now?</string>
    <string name="visited_alert">Are you sure? Do  you want to complete this visit ?</string>
    <string name="map">Track On Map</string>
    <string name="employee_info">Employee Attendance</string>
    <string name="select_empl">Please select an employee</string>
    <string name="admin">Admin</string>
    <string name="add_location">Add Data</string>
    <string name="Editor">Editor</string>
    <string name="home">Home</string>
    <string name="change_pass">Change Password</string>

    <string-array name="ld_activityScreenTitles">
        <item>HOME</item>
        <item>My Profile</item>
        <item>History</item>
        <item>Change Password</item>
        <item />
        <item>Log Out</item>
    </string-array>

    <array name="ld_activityScreenIcons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_list</item>
        <item>@drawable/ic_lock</item>
        <item>0</item>
        <item>@drawable/log_out</item>
    </array>
</resources>
